# chuangyebang

./: .gitignore  DEPLOY.md  Dockerfile  README.md  SPEC.md  docker-compose.yml  plan.md  upload_datasources.py  upload_fix.py  upload_v3.py
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py  business_routes.py  monetization_routes.py  routes.py  vector_routes.py  workflow_routes.py
backend/app/core/: config.py  database.py
backend/app/datasources/: __init__.py  base_datasource.py  datasource_manager.py  free_datasource.py  international_datasource.py  weibo_datasource.py
backend/app/models/: __init__.py  complaint.py
backend/app/schemas/: __init__.py  complaint.py
backend/app/scrapers/: __init__.py  base_scraper.py  complaint_scraper.py  ecommerce_scraper.py  scraper_manager.py  weibo_scraper.py  xiaohongshu_scraper.py
backend/app/services/: __init__.py  ai_analysis_service.py  analysis_service.py  business_model_service.py  monetization_service.py  nlp_service.py  profit_model_service.py  roadmap_service.py  spider_integration_service.py  vector_service.py
backend/app/spiders/: __init__.py  aggregator.py  base_spider.py  complaint_spiders.py  e_commerce_spiders.py  forum_spiders.py  social_spiders.py
backend/app/spiders/scrapy_projects/: README.md  config.yaml  playwright_config.py  setup.py
backend/app/spiders/scrapy_projects/ecommerce/spiders/: jd_spider.py  (+1 more)
backend/tests/: test_api.py  test_business_model.py  test_nlp_service.py  test_spider_integration.py  test_vector_service.py
(+29 files in other folders)
