[project]
name = "chuangyebang"
version = "0.1.0"
description = "创业帮项目后端API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy==2.0.25",
    "psycopg2-binary==2.9.9",
    "redis==5.0.1",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "jieba==0.42.1",
    "playwright==1.41.0",
    "scrapy==2.11.0",
    "httpx==0.26.0",
    "python-multipart==0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "aiosqlite==0.19.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]